--- a/js_saxophone/01 - JavaScript Drum Kit/index-START.html
+++ b/js_saxophone/01 - JavaScript Drum Kit/index-START.html
@@ -2,12 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>JS Drum Kit</title>
+  <title>JS Saxophone</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-
   <div class="keys">
     <div data-key="65" class="key">
       <kbd>A</kbd>
@@ -46,16 +44,16 @@
       <span class="sound">tink</span>
     </div>
   </div>
-
-  <audio data-key="65" src="sounds/clap.wav"></audio>
-  <audio data-key="83" src="sounds/hihat.wav"></audio>
-  <audio data-key="68" src="sounds/kick.wav"></audio>
-  <audio data-key="70" src="sounds/openhat.wav"></audio>
-  <audio data-key="71" src="sounds/boom.wav"></audio>
-  <audio data-key="72" src="sounds/ride.wav"></audio>
-  <audio data-key="74" src="sounds/snare.wav"></audio>
-  <audio data-key="75" src="sounds/tom.wav"></audio>
-  <audio data-key="76" src="sounds/tink.wav"></audio>
+<div> <img id="sax_img" src="saxophone-graphic.jpg"/></div>
+  <audio data-key="65" src="sounds/Sax_1.wav"></audio>
+  <audio data-key="83" src="sounds/Sax_2.wav"></audio>
+  <audio data-key="68" src="sounds/Sax_3.mp3"></audio>
+  <audio data-key="70" src="sounds/Sax_4.mp3"></audio>
+  <audio data-key="71" src="sounds/Sax_5.wav"></audio>
+  <audio data-key="72" src="sounds/Sax_6.wav"></audio>
+  <audio data-key="74" src="sounds/Sax_7.wav"></audio>
+  <audio data-key="75" src="sounds/Sax_8.wav"></audio>
+  <audio data-key="76" src="sounds/Sax_9.wav"></audio>
 
 <script>
   
