add input field to test keypress on mobile

--- a/js_saxophone/index.html
+++ b/js_saxophone/index.html
@@ -46,6 +46,7 @@
     </div>
   </div>
 <div> <img  class ="sax" id="sax_img" src="saxophone-graphic.jpg"/></div>
+<div><input type="text"></div>
 <div>
   <i data-key="65" class='fas fa-music note_one note'></i>
   <i data-key="83" class='fas fa-music note_two note'></i>
